# gogo-ai

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: prod_cd.yml  stage_cd.yml
AI_relay/: Dockerfile  README.md  ValidImages.py  hype_tuning.py  requirements.txt  train.py  videoValid.py  yolo.yaml
AI_relay/data/: Make_yoloYaml.py  drawBoundingBox.py
AI_relay/datapreprocessing/: Make_yoloYaml.py  drawBoundingBox.py  make_test_dataset.py  yoloFormat.py
AI_relay/docker/: dockerfile  requirements.txt
AI_relay/notebooks/: Data_Preprocessing.ipynb
AI_relay/scripts/: jupyter_start.sh
Profanity_Filter/: evaluate.py  train.py  validate.py
Profanity_Filter/Data_preprocessing/: profanity_filter_data_processor.py
Profanity_Filter/data_preprocessing/: data_preprocessor.py
Profanity_Filter/model/: data_loader.py
Profanity_Filter/notebooks/: AI_Profanity_Filter.ipynb
Profanity_Filter/quantization/: dynamic_quantization.py  onnx_format.py  onnx_prediction.py
ai_backend/: .dev.env  server.py  test.py
ai_backend/event/: consumer.py  producer.py
gogo_ai_backend/: .dev.env  Dockerfile  README.mb  config.py  docker-compose.yml  eureka.py  middleware.py  predict_model.py  pyproject.toml  server.py  test.py
gogo_ai_backend/event/: consumer.py  producer.py
gogo_ai_backend/schema/: filter.py
src/config/: middleware.py  settings.py
