[project]
name = "gogo-project"
version = "0.1.0"
description = ""
authors = [
    {name = "kdyeon0309",email = "128110689+kdyeon0309@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "django-health-check (>=3.18.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "gogo_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
