[project]
name = "gogo-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "dongyeon",email = "kdyeon0309@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.50.1,<5.0.0)",
    "aiokafka (>=0.12.0,<0.13.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "middleware (>=1.2.3,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
